# CloudDetectSattelite

./: README.md
NUAGES_SRC/: CMakeLists.txt  Impoved.txt  compute.c  compute.h  compute_misc.c  main.c  misc.c  misc.h
SRC/: CMakeLists.txt  Makefile  compute.c  compute.h  compute_misc.c  main.c  misc.c  misc.h
